[gd_scene load_steps=6 format=3 uid="uid://dp7iaq6wk5p8f"]

[ext_resource type="Script" path="res://menu.gd" id="1_n5fqy"]
[ext_resource type="Script" path="res://control/tree.gd" id="2_3hrqc"]
[ext_resource type="AudioStream" uid="uid://bd21s3i1tuert" path="res://audio/kenney_impact-sounds/Audio/impactWood_light_000.ogg" id="2_aos1x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5nion"]
size = Vector2(1346, 20)

[sub_resource type="SyntaxHighlighter" id="SyntaxHighlighter_sa8d2"]

[node name="Menu" type="Node"]
script = ExtResource("1_n5fqy")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 278.0
offset_top = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 278.0
offset_bottom = 31.0
grow_horizontal = 2
color = Color(0, 0, 0.321569, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
grow_horizontal = 2
grow_vertical = 2
text = "Documentation (doc)"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_aos1x")
volume_db = -18.0
autoplay = true

[node name="Dirs" type="Tree" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 31.0
offset_right = 113.0
grow_vertical = 2
mouse_default_cursor_shape = 2
script = ExtResource("2_3hrqc")

[node name="Files" type="Tree" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 113.0
offset_top = 31.0
offset_right = 278.0
grow_vertical = 2
mouse_default_cursor_shape = 2
script = ExtResource("2_3hrqc")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(531, 635)
rotation = 0.0349066
shape = SubResource("RectangleShape2D_5nion")

[node name="Window" type="Window" parent="."]
title = "Code"
position = Vector2i(700, 100)
size = Vector2i(400, 500)

[node name="CodeEdit" type="CodeEdit" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
syntax_highlighter = SubResource("SyntaxHighlighter_sa8d2")
highlight_all_occurrences = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
code_completion_enabled = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[connection signal="cell_selected" from="Dirs" to="." method="_on_dirs_cell_selected"]
[connection signal="cell_selected" from="Files" to="." method="_on_files_cell_selected"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
